[tool.poetry]
name = "gen"
version = "0.1.0"
description = ""
authors = ["Nick Spaargaren <nickspaargaren@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mflux = "^0.4.1"
black = "^24.10.0"
pathlib = "^1.0.1"
pathvalidate = "^3.2.1"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
