[tool.poetry]
name = "gen"
version = "0.1.0"
description = ""
authors = ["Nick Spaargaren <nickspaargaren@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mflux = "^0.5.1"
black = "^25.1.0"
pathlib = "^1.0.1"
pathvalidate = "^3.2.3"
pytest = "^8.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
