[tool.poetry]
name = "gen"
version = "0.1.0"
description = ""
authors = ["Nick Spaargaren <nickspaargaren@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mflux = "^0.5.1"
black = "^26.1.0"
pathlib = "^1.0.1"
pathvalidate = "^3.2.3"
pytest = "^9.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
